--- a/style.css
+++ b/style.css
@@ -1,33 +1,40 @@
-body {
-  min-height: 100vh;
-  min-width: 100vw;
+@media (max-width: 759px) {
+  body {
+    background-repeat: repeat;
+  }
+}
+@media (min-width: 760px) {
+  body {
+    min-height: 100vh;
+    min-width: 100vw;
 
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  flex: content;
-  flex-direction: row;
-}
-#head {
-  min-width: 100%;
-  min-height: 5vh;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    flex: content;
+    flex-direction: row;
+  }
+  #head {
+    min-width: 100%;
+    min-height: 5vh;
 
-  padding: 5%;
-}
-#headIcon {
-  position: absolute;
-}
-#bodyCenter {
-  display: flex;
-  min-width: 100%;
-  min-height: 90vh;
-  padding-top: 40%;
-  padding-bottom: 40%;
-  padding-left: 10%;
-  padding-right: 10%;
-  align-items: center;
-}
-#foot {
-  min-width: 100%;
-  min-height: 5h;
-  padding: 5%;
+    padding: 5%;
+  }
+  #headIcon {
+    position: absolute;
+  }
+  #bodyCenter {
+    display: flex;
+    min-width: 100%;
+    min-height: 90vh;
+    padding-top: 40%;
+    padding-bottom: 40%;
+    padding-left: 10%;
+    padding-right: 10%;
+    align-items: center;
+  }
+  #foot {
+    min-width: 100%;
+    min-height: 5h;
+    padding: 5%;
+  }
 }
