--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
   height: 100vh;
   overflow: hidden;
 }
-#columnSearchBarContainer {
+#SearchBarContainer {
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
